--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@ui5/webcomponents-react-base": "^1.28.1",
     "@ui5/webcomponents-react-charts": "^1.28.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
